<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sasaja.sasaja.PrekiuPaieska">

    <EditText
        android:id="@+id/etPaieska"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/paieskos_hint" />
    <ListView
        android:id="@+id/listView3"
        android:layout_width="387dp"
        android:layout_height="427dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:onClick="padeti"
        android:text="@string/pagalba"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:onClick="baigti"
        android:text="@string/grizti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView3" />

</android.support.constraint.ConstraintLayout>
